public/v2/components/Playlists.css
#playlists {
  overflow-y: auto;
  overflow-x: hidden;
  position: fixed;
  z-index: var(--playlists-index);
  left: 0;
  right: 0;
  bottom: var(--footer-height);
  transition: top .6s, background-color .6s;
  top: calc(calc(100% - var(--footer-height)) - var(--playlists-menu-height));
  padding-bottom: var(--footer-height);
}

#playlists.scroll-lock {
  overflow-y: hidden;
}

#playlists.playlists-visible {
  top: 0;
  background-color: white;
}

menu {
  position: fixed;
  border-bottom: 3px solid #6f73ff;
  z-index: 1;
  transition: bottom .6s, top .6s;
  height: 3rem;
  display: flex;
  align-items: center;
  transition: background .6s;
  width: 100%;
  margin: 0;
  height: var(--playlists-menu-height);
  padding-left: 0;
}

.playlists-visible menu {
  background-color: white;
}

@media (min-width: 768px) {
  menu {
    z-index: 1;
    right: 1rem;
    transition: bottom .6s;
    height: 3rem;
    display: flex;
    align-items: center;
    justify-content: end;
    width: 30%;
    min-width: 368px;
    translate: 0 -3rem;
  }
}

#playlists > ul {
  margin-top: calc(var(--playlists-menu-height)*1.3);
}

#download-button-playlist,
#clear-button-playlist,
#maximise-button-playlist {
  background-color: transparent;
  box-shadow: none;
  height: unset;
  border-radius: unset;
  transition: opacity .6s;
  transform: translate(0px, 2px);
  padding: 1rem;
}

.playlists-visible #maximise-button-playlist > img.caret-icon {
  transform: rotate(180deg);
}

@media (min-width: 768px) {
  #maximise-button-playlist {
    background-color: transparent;
    box-shadow: none;
    height: unset;
    top: -0.5rem;
  }
}

#playlist-tabs {
  width: 100%;
  height: 100%;
  display: flex;
  overflow-y: hidden;
  overflow-x: auto;
  scrollbar-width: none;
}

#playlist-tabs::-webkit-scrollbar {
  display: none;
}

ul#playlist-tabs li {
  list-style-type: none;
}

.tab-leaf {
  font-size: 0.7rem;
  border-radius: 14px 14px 0 0;
  justify-content: end;
  margin-top: 10px;
  padding: 0.8rem 1rem 1rem 1rem;
  min-width: 140px;
  background-color: white;
  height: 100%;
  border: 1px solid var(--playlist-tab-outline);
}

.tab-leaf-container {
  transition: width 0.2s;
  width: 38px;
}

.tab-leaf-container.background-tab {
  color: var(--neutral);
}

.tab-leaf-container.focussed-tab-leaf {
  width: 100px;
}

.focussed-tab-leaf .tab-leaf {
  font-weight: bold;
}

.background-tab:last-of-type .tab-leaf {
  min-width: 100px;
}

.new-tab-leaf-container {
  min-width: 50px;
  margin-left: 2.5rem;
}

.new-tab-leaf-container .tab-leaf {
  min-width: unset;
}

.new-tab-leaf {
  width: 18px;
}

#playlist-tabs li.focussed-tab-leaf:last-of-type .tab-leaf {
 min-width: 140px;
}

#playlist-tabs li:last-of-type .tab-leaf {
 min-width: 100px;
}

#playlist {
  position: relative;
  min-height: 100%;
}

.playlist-editable-title {
  font-size: 1.5rem;
  font-weight: bold;
  padding: 0.5rem;
}

.playlist-editable-title input {
  font-size: 1.5rem;
  font-weight: bold;
  margin: -3px;
  width: 100%;
}

.playlist-editable-title div {
  padding: 0px 1px;
  position: relative;
}

.playlist-editable-title div button {
  position: absolute;
  right: 0;
  top: -4px;
  background-color: transparent;
  box-shadow: none;
  padding: 0;
}

.playlist-delete-button {
  margin-top: 1rem;
}

.playlist-delete-button-container {
  padding: 0 1px;
  position: absolute;
  bottom: -5rem;
  left: 1rem;
  right: 1rem;
}

.dragover {
  border-bottom: 3px solid var(--brand);
}

.dragover-top {
  border-top: 3px solid var(--brand);
}

.track-placeholder {
  height: 67px;
  width: 100%;
  background-color: var(--brand-lighter);
}

